--- a/Jstylesheet.css
+++ b/Jstylesheet.css
@@ -4,6 +4,14 @@ body, html {
     margin: 0;
 }
 
+#content-desktop {
+display: inline;
+}
+
+#content-mobile {
+display: none;
+}
+
 .example3 .navbar-brand {
   height: 80px;
 }
@@ -169,41 +177,59 @@ div.meetTeam:hover {
 }
 
 @media (max-width: 993px) {
+	#content-desktop {
+	display: none;
+	}
+
+	#content-mobile {
+	display: inline;
+	}
+
     .navbar-header {
         float: none;
     }
+    
     .navbar-toggle {
         display: block;
     }
+    
     .navbar-collapse {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
     }
+    
     .navbar-collapse.collapse {
         display: none!important;
     }
+    
     .navbar-nav {
         float: none!important;
         margin: 7.5px -15px;
     }
+    
     .navbar-nav>li {
         float: none;
         height: 30px;
     }
+    
     .navbar-nav>li>a {
     	padding: 0px;
     }
+    
     .navbar-text {
         float: none;
         margin: 15px 0;
     }
+    
     /* since 3.1.0 */
     .navbar-collapse.collapse.in { 
         display: block!important;
     }
+    
     .collapsing {
         overflow: hidden!important;
     }
+    
     .example3 .nav >li >a {
     	padding: 0px 20px;
     }
@@ -213,7 +239,12 @@ div.meetTeam:hover {
     	padding-left: 15px;
     	padding-bottom: 15px;
     }
+    
     .collapse >ul {
     	padding-top: 15px;
     }
+}
+
+.reps {
+	text-align: center;
 }
