--- a/Jstylesheet.css
+++ b/Jstylesheet.css
@@ -205,6 +205,15 @@ div.meetTeam:hover {
     background-position: center;
 }
 
+.headerWords {
+	text-align: center;
+	color: white;
+	padding-top: 100px;
+	padding-bottom: 100px;
+	font-size: 200px;
+	text-shadow: 2px 2px 15px black;
+}
+
 .reps {
 	text-align: left;
 }
@@ -378,19 +387,25 @@ th img{
     }
 
     .newsSectionOne {
-    	height: 35%;
     	margin-top: 70px;
     }
 
     .productsSectionOne {
-    	height: 35%;
     	margin-top: 70px;
     }
 
     .industriesSectionOne {
-    	height: 35%;
     	margin-top: 70px;
     }
+
+	.headerWords {
+		text-align: center;
+		color: white;
+		padding-top: 50px;
+		padding-bottom: 50px;
+		font-size: 100px;
+		text-shadow: 2px 2px 15px black;
+	}
 
     .distributors {
     	padding-top: 0px;
@@ -408,6 +423,15 @@ th img{
 
 	.otherFive {
 		width: 100%;
+	}
+
+	.headerWords {
+		text-align: center;
+		color: white;
+		padding-top: 50px;
+		padding-bottom: 50px;
+		font-size: 75px;
+		text-shadow: 2px 2px 15px black;
 	}
 }
 
