--- a/Jstylesheet.css
+++ b/Jstylesheet.css
@@ -311,6 +311,20 @@ h2.news {
 	width: 20%;
 }
 
+.videoContainer {
+    position: relative;
+    width: 95%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 table { 
     display: table;
     border-collapse: separate;
