--- a/Jstylesheet.css
+++ b/Jstylesheet.css
@@ -264,6 +264,11 @@ div.meetTeam:hover {
 	text-shadow: 2px 2px 15px black;
 }
 
+.allProductsSection {
+	background-image: url(images/products/background.jpg);
+    background-position: center;
+}
+
 .reps {
 	text-align: left;
 }
@@ -555,75 +560,79 @@ th img{
 		font-size: 20px;
 		margin-top: -10px;
 	}
+
+	th, td {
+		width: 100%;
+	}
 }
 
-.carousel-fade .carousel-inner .item {
+.indexCarousel-fade .indexCarousel-inner .indexItem {
     opacity: 0;
     transition-property: opacity;
 }
-.carousel-fade .carousel-inner .active {
+.indexCarousel-fade .indexCarousel-inner .indexActive {
     opacity: 1;
 }
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
+.indexCarousel-fade .indexCarousel-inner .indexActive.left,
+.indexCarousel-fade .indexCarousel-inner .indexActive.right {
     left: 0;
     opacity: 0;
     z-index: 1;
 }
-.carousel-fade .carousel-inner .next.left,
-.carousel-fade .carousel-inner .prev.right {
+.indexCarousel-fade .indexCarousel-inner .next.left,
+.indexCarousel-fade .indexCarousel-inner .prev.right {
     opacity: 1;
 }
-.carousel-fade .carousel-control {
+.indexCarousel-fade .indexCarousel-control {
     z-index: 2;
 }
 @media all and (transform-3d),
 (-webkit-transform-3d) {
-    .carousel-fade .carousel-inner > .item.next,
-    .carousel-fade .carousel-inner > .item.active.right {
+    .indexCarousel-fade .indexCarousel-inner > .indexItem.next,
+    .indexCarousel-fade .indexCarousel-inner > .indexItem.indexActive.right {
         opacity: 0;
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
     }
-    .carousel-fade .carousel-inner > .item.prev,
-    .carousel-fade .carousel-inner > .item.active.left {
+    .indexCarousel-fade .indexCarousel-inner > .indexItem.prev,
+    .indexCarousel-fade .indexCarousel-inner > .indexItem.indexActive.left {
         opacity: 0;
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
     }
-    .carousel-fade .carousel-inner > .item.next.left,
-    .carousel-fade .carousel-inner > .item.prev.right,
-    .carousel-fade .carousel-inner > .item.active {
+    .indexCarousel-fade .indexCarousel-inner > .indexItem.next.left,
+    .indexCarousel-fade .indexCarousel-inner > .indexItem.prev.right,
+    .indexCarousel-fade .indexCarousel-inner > .indexItem.active {
         opacity: 1;
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
     }
 }
-.item:nth-child(1) {
+.indexItem:nth-child(1) {
     background: url(images/index/banner1.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
-.item:nth-child(2) {
+.indexItem:nth-child(2) {
     background: url(images/index/banner2.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
-.item:nth-child(3) {
+.indexItem:nth-child(3) {
     background: url(images/index/banner4.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
-.carousel {
+.indexCarousel {
     z-index: -99;
 }
-.carousel .item {
+.indexCarousel .indexItem {
     position: fixed;
     width: 100%;
     height: 100%;
