New product format for OLED

--- a/Jstylesheet.css
+++ b/Jstylesheet.css
@@ -267,6 +267,7 @@ div.meetTeam:hover {
 .allProductsSection {
 	background-image: url(images/products/background.jpg);
     background-position: center;
+    background-attachment: scroll;
 }
 
 .reps {
