--- a/Jstylesheet.css
+++ b/Jstylesheet.css
@@ -106,7 +106,7 @@ display: none;
 }
 
 .homeSectionThree {
-	background-image: url(images/index/bannerNews.png);
+	background-image: url(images/index/bannerNews1.jpg);
     background-position: center;
     min-height: 25%;
 }
@@ -208,8 +208,8 @@ a.newsLink:hover {
 }
 
 .productImage {
-	border-radius: 35px 35px 15px 15px;
-	padding-top: 15px;
+	border-radius: 15px;
+	margin-top: 15px;
 }
 
 .aboutSectionOne {
